feat: adds UpdateSubscriberGroup
    - adds UpdateSubscriberGroup end point
    - adds a new model called CreateUpdateSubscriberGroupAPI which is more suitable to be used
      in update and add new sub-group
